; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_cli.c_ssl_parse_supported_point_formats_ext.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_ssl_cli.c_ssl_parse_supported_point_formats_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__* }
%struct.TYPE_9__ = type { %struct.TYPE_8__, %struct.TYPE_7__ }
%struct.TYPE_8__ = type { i8 }
%struct.TYPE_7__ = type { i8 }

@.str = private unnamed_addr constant [25 x i8] c"bad server hello message\00", align 1
@MBEDTLS_SSL_ALERT_LEVEL_FATAL = common dso_local global i32 0, align 4
@MBEDTLS_SSL_ALERT_MSG_DECODE_ERROR = common dso_local global i32 0, align 4
@MBEDTLS_ERR_SSL_BAD_HS_SERVER_HELLO = common dso_local global i32 0, align 4
@MBEDTLS_ECP_PF_UNCOMPRESSED = common dso_local global i8 0, align 1
@MBEDTLS_ECP_PF_COMPRESSED = common dso_local global i8 0, align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"point format selected: %d\00", align 1
@.str.2 = private unnamed_addr constant [26 x i8] c"no point format in common\00", align 1
@MBEDTLS_SSL_ALERT_MSG_HANDSHAKE_FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i8*, i64)* @ssl_parse_supported_point_formats_ext to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ssl_parse_supported_point_formats_ext(%struct.TYPE_10__* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = getelementptr inbounds i8, i8* %10, i64 0
  %12 = load i8, i8* %11, align 1
  %13 = zext i8 %12 to i64
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %8, align 8
  %15 = add i64 %14, 1
  %16 = load i64, i64* %7, align 8
  %17 = icmp ne i64 %15, %16
  br i1 %17, label %18, label %25

18:                                               ; preds = %3
  %19 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 1, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %20 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %21 = load i32, i32* @MBEDTLS_SSL_ALERT_LEVEL_FATAL, align 4
  %22 = load i32, i32* @MBEDTLS_SSL_ALERT_MSG_DECODE_ERROR, align 4
  %23 = call i32 @mbedtls_ssl_send_alert_message(%struct.TYPE_10__* %20, i32 %21, i32 %22)
  %24 = load i32, i32* @MBEDTLS_ERR_SSL_BAD_HS_SERVER_HELLO, align 4
  store i32 %24, i32* %4, align 4
  br label %66

25:                                               ; preds = %3
  %26 = load i8*, i8** %6, align 8
  %27 = getelementptr inbounds i8, i8* %26, i64 1
  store i8* %27, i8** %9, align 8
  br label %28

28:                                               ; preds = %54, %25
  %29 = load i64, i64* %8, align 8
  %30 = icmp ugt i64 %29, 0
  br i1 %30, label %31, label %59

31:                                               ; preds = %28
  %32 = load i8*, i8** %9, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 0
  %34 = load i8, i8* %33, align 1
  %35 = zext i8 %34 to i32
  %36 = load i8, i8* @MBEDTLS_ECP_PF_UNCOMPRESSED, align 1
  %37 = zext i8 %36 to i32
  %38 = icmp eq i32 %35, %37
  br i1 %38, label %47, label %39

39:                                               ; preds = %31
  %40 = load i8*, i8** %9, align 8
  %41 = getelementptr inbounds i8, i8* %40, i64 0
  %42 = load i8, i8* %41, align 1
  %43 = zext i8 %42 to i32
  %44 = load i8, i8* @MBEDTLS_ECP_PF_COMPRESSED, align 1
  %45 = zext i8 %44 to i32
  %46 = icmp eq i32 %43, %45
  br i1 %46, label %47, label %54

47:                                               ; preds = %39, %31
  %48 = load i8*, i8** %9, align 8
  %49 = getelementptr inbounds i8, i8* %48, i64 0
  %50 = load i8, i8* %49, align 1
  %51 = zext i8 %50 to i64
  %52 = inttoptr i64 %51 to i8*
  %53 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 4, i8* %52)
  store i32 0, i32* %4, align 4
  br label %66

54:                                               ; preds = %39
  %55 = load i64, i64* %8, align 8
  %56 = add i64 %55, -1
  store i64 %56, i64* %8, align 8
  %57 = load i8*, i8** %9, align 8
  %58 = getelementptr inbounds i8, i8* %57, i32 1
  store i8* %58, i8** %9, align 8
  br label %28

59:                                               ; preds = %28
  %60 = call i32 @MBEDTLS_SSL_DEBUG_MSG(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0))
  %61 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %62 = load i32, i32* @MBEDTLS_SSL_ALERT_LEVEL_FATAL, align 4
  %63 = load i32, i32* @MBEDTLS_SSL_ALERT_MSG_HANDSHAKE_FAILURE, align 4
  %64 = call i32 @mbedtls_ssl_send_alert_message(%struct.TYPE_10__* %61, i32 %62, i32 %63)
  %65 = load i32, i32* @MBEDTLS_ERR_SSL_BAD_HS_SERVER_HELLO, align 4
  store i32 %65, i32* %4, align 4
  br label %66

66:                                               ; preds = %59, %47, %18
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i32 @MBEDTLS_SSL_DEBUG_MSG(i32, i8*) #1

declare dso_local i32 @mbedtls_ssl_send_alert_message(%struct.TYPE_10__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
